--- a/about-covid.html
+++ b/about-covid.html
@@ -1,7 +1,143 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
+	
+	      <link rel="stylesheet" type="text/css" href="style.css">
+	  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+      <style >
+	      .padd {
+  padding: 20px;
+ 
+}
+      	body
+      	{
+      		margin: 10;
+      		padding: 10;
+      		font-family:  'Poppins', sans-serif;
+			background-attachment: fixed;
+			background-color: rgb(212, 37, 37);  
+      	}
+      	header
+      	{
+      		position: relative;
+      		max-width: 1400px;
+      		margin: 10px auto;
+      		padding: 10px;
+      		background:#18187d;
+      		box-sizing: border-box;
+      		border-radius: 4px;
+      		box-shadow:  0 2px 10px rgba(0,0,0,.2);
+
+      	}
+      	.logo
+      	{
+      		color: #ffffff;
+      		height: 60px;
+      		font-size: 35px;
+      		line-height: 60px;
+      		padding: 0 20px;
+      		text-align: center;
+      		box-sizing: border-box;
+      		float: left;
+
+      		font-weight: bold;
+      		text-decoration: none;
+      	}
+      	nav
+      	{
+      		float: right;
+      	}
+      	.clearfix{
+      		clear: both;
+      	}
+      	nav ul
+      	{
+      		margin: 0;
+      		padding:0;
+      		display: flex;
+      	}
+      	nav ul li {
+      		list-style: none;
+      	}
+      	nav ul li a 
+      	{
+      		display: block;
+      		margin: 10px 0;
+      		padding: 10px 20px;
+      		text-decoration: none;
+      		color: #ffffff;
+      	}
+      	nav ul li a.active,
+      	nav ul li a:hover
+      	{
+      		background: #069370;
+      		color: #fff;
+      		transition: 0,5s;
+
+      	}
+      	@media (max-width: 1200px)
+      	{
+                 header
+                 {
+                 	margin: 20px;
+                 }
+      	}
+      	@media (max-width: 768px)
+      	{
+      		.menu-toggle
+      		{
+      			display: block;
+      			width: 40px;
+      			height: 40px;
+      			margin: 10px;
+      			background: #ccc;
+      			float: right;
+      			cursor: pointer;
+      			text-align: center;
+      			font-size: 30px;
+      			color: #069370;
+      		}
+      		.menu-toggle:before
+      		{
+      			content: '\f0c9';
+      			font-family: fontAwesome;
+      			line-height: 40px;
+      		}
+      		.menu-toggle.active:before
+      		{
+      			content: '\f0c9';
+      			font-family: fontAwesome;
+      			line-height: 40px;
+      		}
+      		nav
+      		{
+      			display: none;
+      		}
+      		nav.active
+      		{
+      			display: block;
+      			width: 100%;
+      		}
+      		nav.active ul
+      		{
+      			display: block;
+      		}
+      	}
+      	.logo-img{
+    position: relative;
+    margin: 5px 5px -55px 6px;
+}
+.boxing {
+  background-color: lightgrey;
+  width: 100%;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 15px;
+}	      
+      </style>
+
 	<title>About Covid-19</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width= device-width, initial-scale = 1.0">
@@ -11,184 +147,223 @@
    	<link rel="stylesheet" href="css/bootstrap/bootstrap.css">
 </head>
 <body>
-	<nav class="navbar navbar-dark bg-dark">
-		<a href="index.html">Home</a>
-		<a href="about-covid.html">About Covid-19</a>
-		<a href="world_tracker.html">Tracker</a>
-		<a href="about-team.html">About Team</a>
-		<a href="gallery.html">Gallery</a>
-		<a href="games.html">Games</a>
+	    <header>
+    	<a href="index.html" id="logo"><img class="logo-img" src="images/logo.JPG" ALT="align box" ALIGN=CENTER></a>
+    	<div class="menu-toggle"></div>
+    	<nav>
+    		<ul>
+    			<li><a href="index.html" >Home</a></li>
+    			<li><a href="about-covid.html" class="active">About Covid</a></li>
+    			<li><a href="games.html">Games</a></li>
+    			<li><a href="gallery.html">Gallery</a></li>
+    			<li><a href="about-team.html">About Us</a></li>
+    		</ul>
+    	</nav>
+    	<div class="clearfix"></div>
+    </header>
 
-	</nav>
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=
+" crossorigin="anonymous"></script>
+<script type="text/javascript">
+	$(document).ready(function(){$('..menu-toggle').click(function(){$('.menu-toggle').toggleClass('active')
+		$('nav').toggleClass('active')
+})
+})
+</script>
+
 	<div id="firsdiv">
-		  <img src="images/cov1.png">
+		  <img src="images/cover.png" height="400px" width="1390px" />
 	 </div>
+	<div  class="padd">
 	<div class="coro">
-		<h1>Coronavirus</h1> 
-		<p> Coronavirus also known as Covid-19 is a pnuemonia-like disease that affects respiratory system of human body.
+		<div class="boxing">
+		<center><h1 style="font-style:italic;">What is Coronavirus ? </h1> </center>
+		<p> <strong>Coronavirus disease (COVID-19)</strong>  is an infectious disease
+			caused by a newly discovered coronavirus.
+
+Most people infected with the COVID-19 virus will experience mild to moderate respiratory illness and recover without 
+			requiring special treatment.  Older people, and those with underlying medical problems like cardiovascular disease, diabetes, 
+			chronic respiratory disease, and cancer are more likely to develop serious illness.<br>
+
+The best way to prevent and slow down transmission is be well informed about the COVID-19 virus, the disease it causes 
+			and how it spreads. Protect yourself and others from infection by washing your hands or using 
+			an alcohol based rub frequently and not touching your face. 
+
+The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose when an infected person coughs
+			or sneezes, so it’s important that you also practice respiratory etiquette (for example, by coughing into a flexed elbow).<br>
+
+At this time, there are no specific vaccines or treatments for COVID-19. However, there are many ongoing clinical trials
+			evaluating potential treatments. WHO will continue to provide updated information as soon as clinical findings become available.
 		</p>
-		<p>It started in Chinese City of <b>Wuhan</b> late december 2019 and spread to the rest of the world at alarming rate.</p>
+	</div>
 	</div>
 <div>
 	<div class="symptom">
-		<h2>Symptoms</h2>
-		<p>Covid-19 affects different in different ways.most infected people will develop mild to moderate illness and recover without hospitalizatiion.</p>
-	</div>
-<div class="container">	
-	<div class="most-common-symp col-sm-6 col-md-4 col-lg-2 container-fluid" >
-		<div class="row">
-			<div class="col">
-		<span>Most common Symptoms:</span>
-		<ul>
+		<center><h2>What are its Common Symptoms ?</h2></center>
+		<ul class="sym">
+			<p>Common symptoms</p>
 			<li>Fever</li>
 			<li>Dry cough</li>
 			<li>Tiredness</li>
+			<li>AChes and pains</li>
 		</ul>
+		<ul class="sym">
+			<p>Common symptoms</p>
+			<li>Sore throat</li>
+			<li>Diarrhoea</li>
+			<li>Conjunctivitis</li>
+			<li>Headache</li>
+		</ul>
+		<ul class="sym">	
+			<p>Severe symptoms</p>
+			<li>Loss of taste</li>
+			<li>Difficulty or shortness of breath</li>
+			<li>Chest pain or pressure</li>
+			<li>A rash on skin or discolourization of fingers or toes</li>
+		</ul>
+		<br>
+		<center>
+		   <button type="button" onclick="show()" class="btn btn-info">Show more Symptoms</button>
+		</center>
 	</div>
-	</div>
-	</div>
-	<div class="less-common-symp col-sm-6 col-md-4 col-lg-2 container-fluid">
-		<div class="row">
-			<div class="col">
-        <span>Less common symptoms:</span>
-        <ul>
-        	<li>Headache</li>
-        	<li>Sore throat</li>
-        	<li>Diarrhoea</li>
-        	<li>Loss of taste and smell</li>
-        	<li>Conjunctivitis</li>
-        </ul>
-    </div>
-    </div>
-     </div>
-     <div class="serious-symp col-sm-6 col-md-4 col-lg-2 col">
-     	<div class="row">
-     		<div class="col">
-        <span>Seroius symptoms:</span>
-        <ul>
-        	<li>Difficulty in breathing or shortness of breath</li>
-        	<li>Chest pain or pressure</li>
-        	<li>loss of speech or movement</li>
-        </ul>
-    </div>
-    </div>
-    </div>
-  </div>
-</div>
+
+		<div class="imagess">
+			<img src="images/symp1.png" alt="Loading"/>                   
+       </div>
+  
+
 <div>
-	<div class=".dos-and-donts div">
-		<h3>Prevention</h3>
+	<div class="dos-and-donts div">
+		<center><h2>Ways Of Prevention</h2><center>		
 		<div class="row dos-and-donts">
-			<div>
-				<span>Avoid handshakes</span>
-				<img src="images/nohandshake.jpg">
+			<div class="brd-bottom">
+				<span> Avoid Handshake</span> 
+				<img src="images/nohandshake.jpg" alt="No handshake">
 			</div>
-			<div>
-				<span>Wash hands with clean water nd soap</span>
-				<img src="images/washhand.jpg">
+			<div class="brd-bottom">
+				<span> Wash hands with clean water and soap </span>
+				<img src="images/washhand.jpg" alt="Wash hands">
 			</div>
-			<div>
-				<span>Use sanitizer</span>
-				<img src="images/san.jpg">
+			<div class="brd-bottom">
+				<span> Use sanitizer </span>
+				<img src="images/san.jpg" alt="Sanitizer">
 			</div>
-			<div>
-				<span>Wear face mask</span>
-				<img src="images/mask.png">
+			<div class="brd-bottom">
+				<span> Wear face mask </span>
+				<img src="images/mask.png" atl="person wearing mask">
 			</div>
-			<div>
-				<span>Do not touch your nose</span>
-				<img src="images/ntn.jpg">
+			<div class="brd-bottom">
+				<span> Avoid touching your face </span>
+				<img src="images/ntm.jpg" alt="no touching facing">
 			</div>
-			<div>
-				<span>Do not touch your mouth</span>
-				<img src="images/ntm.jpg">
+			<div class="brd-bottom">
+				<span> Keep Social distance </span>
+				<img src="images/distance.png" alt="people 2 meters apart">
 			</div>
-			<div>
-				<span>Do not touch your eyes</span>
-				<img src="images/nte.png">
+			<div class="brd-bottom">
+				<span> Avoid crowded places </span>
+				<img src="images/avoidcrowd.png" alt="avoid crowd">
 			</div>
-			<div>
-				<span>Avoid smoking</span>
-				<img src="images/nosmoking.png">
+			<div class="brd-bottom">
+				<span>Stay at home</span>
+				<img src="images/shome.jpg" alt="stay home">
 			</div>
-			<div>
-				<span>Cough or sneeze in your elbow</span>
-				<img src="images/coughinelbow.jpg">
-			</div>
-			<div>
-				<span>Social distance</span>
-				<img src="images/distance.png">
-			</div>
+
 		</div>
 	</div>
 </div>
-<div>
-	<h3>Top 5 countries with most cases</h3>
-	<table class="table table-striped table-hover">
-		<thead>Top 5 countires with most confirmed cases</thead>
-		<tr>
-			<th>S/NO</th>
-			<th>Name</th>
-			<th>Confirmed cases</th>
-			<th>Active cases</th>
-			<th>Recovered</th>
-			<th>Deaths</th>
-			<th>Tests</th>
-		</tr>
-		<tr>
-			<td>1</td>
-			<td>USA</td>
-			<td>2,000,000</td>
-			<td>1,111,000</td>
-			<td>78,000</td>
-			<td>20,000</td>
-			<td>21,000,000</td>
-		</tr>
-		<tr>
-			<td>2</td>
-			<td>Brazil</td>
-			<td>860,000</td>
-			<td>111,000</td>
-			<td>78,000</td>
-			<td>20,000</td>
-			<td>11,000,000</td>
-		</tr>
-		<tr>
-			<td>3</td>
-			<td>Russia</td>
-			<td>537,210</td>
-			<td>130,000</td>
-			<td>200,000</td>
-			<td>7,000</td>
-		</tr>
 
-		<tr>
-			<td>4</td>
-			<td>India</td>
-			<td>333,200</td>
-			<td>135,000</td>
-			<td>165,000</td>
-			<td>9,000</td>
-			<td>19,000,000</td>
-		</tr>
-
-		<tr>
-			<td>5</td>
-			<td>United Kingdom</td>
-
-		</tr>
-	</table>
+<div class="healthy-lifestyle">
+		<center>	
+			<h2>Living healthy lifestyle during Covid-19</h2>
+			<div>
+				<span>Do physical exercise for at least 30mins a day</span>
+				<!--<img src="images/yoga.jpg">-->
+			</div>
+			<div>
+				<span>Avoid smoking and drinking</span>
+				<!--<img src="images/nosmoking.png">-->
+			</div>
+			<div>
+				<span>Eat healthy food</span>
+				<!--<img src="images/fruits.jpg">-->
+			</div>
+		</center>
+		
 </div>
-<div>
-	<h3>Where to get reliable info about Covid-19</h3>
-	<ul>
-		<li><a href="https://www.mohfw.gov.in/">MoHFW, GOI</a></li>
-		<li><a href="https://www.who.int/">World Health organisation</a></li>
-	</ul>
+		<br>
+		<br>
+		<br>
+		<center><H2> Q&A On Coronavirus</H2></center>
+		<center>
+				<div class="QnA">
+					<h4>What is Covid-19</h4>
+					<span>Can Covid-19 be caught from person with no Symptoms? </span>
+					<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-coronaviruses" target="_blank">
+						<img src="images/plus.png"> 
+					</a>
+				</div>
+				<div class="QnA">
+					<h4>Tobacco and Covid-19</h4>
+					<span>As a smoker, is my risk of getting Covid-19 virus higher than that of non-smoker?</span>
+					<a href="https://www.who.int/news-room/q-a-detail/q-a-on-tobacco-and-covid-19" target="_blank" >
+						<img src="images/plus.png"> 
+					</a>
+				</div>
+				<div class="QnA">
+					<h4>Medical breakthrough</h4>
+					<span>Should i take Dexamethasone to prevent Covid-19?</span>
+					<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-dexamethasone-and-covid-19" target="_blank">
+					   <img src="images/plus.png">
+				    </a>
+				</div>
+				<div class="QnA">
+					<h4>Older people and Covid-19</h4>
+					<span>Are older people at high risk?</span>
+					<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-on-on-covid-19-for-older-people" target="_blank">
+					   <img src="images/plus.png">
+				   </a>
+				</div>
+				<div class="QnA">
+					<h4>Medical breakthrough</h4>
+					<span>Is there vaccine, drug or treatment for Covid-19?</span>
+					<a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-on-on-covid-19-for-older-people" target="_blank">
+					   <img src="images/plus.png"> 
+					</a>
+				</div>
+		</center>
+
+		
+		
+<div class="pmcares">
+	<Center><H1>Want to Contribute <H1></Center>
+		<center>
+			<p>Fighting Covid-19 demands our collective participation.</p>
+			<p>In order to do so, PMCARES gives you a chance to punch Covid-19 right in the face by donating <b>any amount</b></p>
+			<p>This is the right time to show your patriotism and fulfill your national duties as a citizen</p>
+			<button type="button" class="btn btn-outline-success"><a href="https://www.pmcares.gov.in/en/">Donate</a></button>
+	   </center>
+	   <br>
+		<a href="https://www.pmcares.gov.in/en/"><img src="images/pm.jpg"/></a>
+</div>
+<div class="org">
+	<center><h2>Organizations Working for Covid 19</h2></center>
+<CENTER>
+		<ul>
+		   <li> <a href="https://www.mohfw.gov.in/">
+			   <span><img src="images/mohfw.jpg"</span> MoHFW, GOI</a></li>
+			<li><a href="https://www.who.int/"> 
+				<span> <img src="images/who.png"> World Health Organisation</span></a></li>
+	   </ul>
+</CENTER>
+	
 </div>
 
 
-
+		</div>
 
 <!----------FOOTER SECTION----------->
  <footer class="site-section bg-light footer">
@@ -241,6 +416,7 @@
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery.sticky.js"></script>
   <script src="js/isotope.pkgd.min.js"></script>
+  <script src="js/about-covid.js"></script>
 
   
   <script src="js/main.js"></script>
